# legend-buzzer

./: .gitignore  .gitmodules  README.md
include/: deviceConfiguration.h  legend.h  request.h
nowlegend-bridge/: CMakeLists.txt
nowlegend-bridge/include/: serialportInterface.h  websocketInterface.h
nowlegend-bridge/src/: main.cpp  serialportInterface.cpp  websocketInterface.cpp
nowlegend-master/: platformio.ini
nowlegend-master/include/: legendMaster.h  routerInterface.h  serialPortInterface.h
nowlegend-master/include/handlers/: baseHandler.h  echoHandler.h  handlerManager.h  heartbeatHandler.h  identificationHandler.h  (+2 more)
nowlegend-master/src/: handlerManager.cpp  legendMaster.cpp  main.cpp  routerInterface.cpp
nowlegend-pybridge/: .python-version  main.py  serial_interface.py  websocket_interface.py
nowlegend-pybridge/test/: client.py  server.py
nowlegend-slave/: platformio.ini
nowlegend-slave/include/: fct_utils.h  legend.h  stateMachine.h  timer.h  transmission.h  utils.h
nowlegend-slave/src/: deviceConfiguration.cpp  legend.cpp  main.cpp  timer.cpp  transmission.cpp
shared/legendUtils/: baseHandler.cpp  baseHandler.h  deviceManager.cpp  deviceManager.h  fct_utils.cpp  fct_utils.h  handlerManager.cpp  handlerManager.h  library.json  logger.h  request.cpp  request.h  router.cpp  router.h  routerInterface.cpp  routerInterface.h  serialportInterface.cpp  serialportInterface.h  timer.cpp  transmission.cpp  transmission.h  type.h
shared/request/: library.json  request.cpp  request.h
shared/transmission/: library.json
src/: legend.cpp  request.cpp
(+15 files in other folders)
